음.. 코틀린은 코틀린 만의 테스트 코드 작성법이 있네

--- a/passive-income/app-api/src/main/resources/messages/api-response_en.properties
+++ b/passive-income/app-api/src/main/resources/messages/api-response_en.properties
@@ -4,3 +4,5 @@ user.not-found=User not found.
 stock.not-found=Stock not found.
 # Trading Strategy
 trading_strategy.not-found=Trading strategy not found.
+# Portfolio
+interest-group.not-found=Interest group not found.
