--- a/passive-income/app-api/src/main/resources/messages/api-response_ko.properties
+++ b/passive-income/app-api/src/main/resources/messages/api-response_ko.properties
@@ -4,3 +4,5 @@ user.not-found=\uC0AC\uC6A9\uC790\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC5B4\uC694.
 stock.not-found=\uC8FC\uC2DD\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC5B4\uC694.
 # Trading Strategy
 trading_strategy.not-found=\uD2B8\uB808\uC774\uB529 \uC804\uB7B5\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC5B4\uC694.
+# Portfolio
+interest-group.not-found=\uAD00\uC2EC \uADF8\uB8F9\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC5B4\uC694.
