--- a/passive-income/system-web/src/main/resources/messages/web-response_ko.properties
+++ b/passive-income/system-web/src/main/resources/messages/web-response_ko.properties
@@ -1,1 +1,2 @@
 web.error.invalid-request-data=\uC694\uCCAD \uB370\uC774\uD130\uAC00 \uC774\uC0C1\uD574\uC694.
+web.error.unauthorized=\uC778\uC99D\uC774 \uD544\uC694\uD574\uC694.
