사용자 투자 서비스 추가

--- a/passive-income/system-web/src/main/resources/messages/web-response_en.properties
+++ b/passive-income/system-web/src/main/resources/messages/web-response_en.properties
@@ -1,2 +1,3 @@
 web.error.invalid-request-data=Invalid request data.
 web.error.unauthorized=Authentication is required.
+web.error.not-found=Requested URL not found.
