--- a/passive-income/domain-portfolio/src/main/resources/messages/domain-portfolio_en.properties
+++ b/passive-income/domain-portfolio/src/main/resources/messages/domain-portfolio_en.properties
@@ -1,1 +1,2 @@
 interest-stock.duplicate-in-group=This stock is already in the group.
+user-investment.duplicate-stock-in-investment=This stock is already included in the investment.
