--- a/passive-income/domain-portfolio/src/main/resources/messages/domain-portfolio_ko.properties
+++ b/passive-income/domain-portfolio/src/main/resources/messages/domain-portfolio_ko.properties
@@ -1,1 +1,2 @@
 interest-stock.duplicate-in-group=\uD574\uB2F9 \uC8FC\uC2DD\uC740 \uC774\uBBF8 \uADF8\uB8F9\uC5D0 \uC18D\uD574 \uC788\uC2B5\uB2C8\uB2E4.
+user-investment.duplicate-stock-in-investment=\uD574\uB2F9 \uC8FC\uC2DD\uC740 \uC774\uBBF8 \uD22C\uC790\uC5D0 \uD3EC\uD568\uB418\uC5B4 \uC788\uC2B5\uB2C8\uB2E4.
